--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ The <abbr title="World Health Organization">WHO</abbr> was founded in 1948.<br><
 
 
 
-<video  src="video/cat.mp4" type="video/mp4" controls ></video>
+<video  src="video/cat.mp4"controls ></video>
 
 
 
